[package]
name = "serialize"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Provides a serializing trait for 2d vectors and arrays"
repository = "https://github.com/sigurd4/serialize"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.1"